--- a/wp-content/mu-plugins/theme-setup/assets/less/app.less
+++ b/wp-content/mu-plugins/theme-setup/assets/less/app.less
@@ -1,7 +1,15 @@
-.entry-footer,
-.comments-area {
-	margin-left: calc(2 * (100vw / 12));
-	margin-right: calc(2 * (100vw / 12));
-}
+//.entry-footer,
+//.comments-area {
+//	margin-left: calc(2 * (100vw / 12));
+//	margin-right: calc(2 * (100vw / 12));
+//}
 
+.breadcrumbs {
+	margin-bottom: 20px;
+
+	&,
+	& a {
+		color: #666 !important;
+	}
+}
 
