--- a/wp-content/mu-plugins/theme-setup/assets/css/app.css
+++ b/wp-content/mu-plugins/theme-setup/assets/css/app.css
@@ -5,3 +5,8 @@
 .breadcrumbs a {
   color: #666 !important;
 }
+
+.emoji-container .emoji-emotion-icon {
+  width: 42px !important;
+  height: 42px !important;
+}
