Fix bug with buttons on mobile devices

--- a/wp-content/mu-plugins/assets/scss/app.scss
+++ b/wp-content/mu-plugins/assets/scss/app.scss
@@ -3,3 +3,5 @@
 @import "components/syntax-highlighter";
 @import "components/breadcrumbs";
 @import "components/post-emoji";
+@import "components/entry-related";
+@import "components/forms";
