Add syntax highlighter for posts

--- a/wp-content/mu-plugins/assets/scss/app.scss
+++ b/wp-content/mu-plugins/assets/scss/app.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import "components/syntax-highlighter";
+@import "components/code";
 @import "components/breadcrumbs";
 @import "components/post-emoji";
 @import "components/entry-related";
