--- a/wp-content/mu-plugins/assets/scss/components/code.scss
+++ b/wp-content/mu-plugins/assets/scss/components/code.scss
@@ -1,3 +1,8 @@
+.wp-block-code {
+  border-left: 3px solid var(--global-palette-btn-bg);
+  padding: 1.5em!important;
+}
+
 p code {
   display: inline-block;
   padding: 0 3px!important;
