Перенс ресурсы из плагина в дочернюю тему

--- a/wp-content/themes/kadence-child/assets/scss/components/entry-related.scss
+++ b/wp-content/themes/kadence-child/assets/scss/components/entry-related.scss
@@ -1,5 +1,6 @@
 .entry-related {
-  margin-top: 0 !important;
+  //margin-top: 0 !important;
+  background-color: #fff;
 }
 
 .entry-related-inner-content {
