Добавил отсутпы у заголовков виджетов

--- a/wp-content/themes/kadence-child/assets/scss/components/styles.scss
+++ b/wp-content/themes/kadence-child/assets/scss/components/styles.scss
@@ -167,7 +167,7 @@
         font-size: 14px !important;
         font-weight: normal !important;
         color: #fff !important;
-        margin-bottom: 15px;
+        margin-bottom: 15px !important;
 
         &__wrapper {
             background-color: #333;
