Фиксит баги с комментариями

--- a/wp-content/themes/kadence-child/assets/scss/components/comments.scss
+++ b/wp-content/themes/kadence-child/assets/scss/components/comments.scss
@@ -5,6 +5,7 @@
     background-color: #fff;
     padding-top: 2rem;
     padding-bottom: 2rem !important;
+    display: none;
 }
 
 #wpdcom {
@@ -20,6 +21,7 @@
         background-color: #fff;
         padding: 2rem;
         min-height: 330px;
+        margin-top: 2.5em;
     }
 }
 
