Резервная копия сайта

--- a/wp-content/themes/kadence-child/assets/scss/components/comments.scss
+++ b/wp-content/themes/kadence-child/assets/scss/components/comments.scss
@@ -33,12 +33,13 @@
     #comments {
         margin-left: -1rem !important;
         margin-right: -1rem !important;
-        //padding: 0 !important;
     }
 
     .comments {
         &--telegram {
             padding: 1rem;
+            margin-left: -1rem !important;
+            margin-right: -1rem !important;
         }
     }
 }
